tests/baselines/reference/compoundExponentiationAssignmentLHSCanBeAssigned1.errors.txt
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(11,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(12,8): error TS18050: The value 'undefined' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(18,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(19,8): error TS18050: The value 'undefined' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(22,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(23,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(24,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(25,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(25,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(26,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(26,8): error TS18050: The value 'undefined' cannot be used here.


==== compoundExponentiationAssignmentLHSCanBeAssigned1.ts (11 errors) ====
    enum E { a, b, c }
    
    var a: any;
    var b: number;
    var c: E;
    
    var x1: any;
    x1 **= a;
    x1 **= b;
    x1 **= c;
    x1 **= null;
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x1 **= undefined;
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var x2: number;
    x2 **= a;
    x2 **= b;
    x2 **= c;
    x2 **= null;
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x2 **= undefined;
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var x3: E;
    x3 **= a;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
    x3 **= b;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
    x3 **= c;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
    x3 **= null;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x3 **= undefined;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.